--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
-    "jszip": "^3.7.1",
-    "ws": "^7.4.3"
+    "isomorphic-ws": "^5.0.0",
+    "jszip": "^3.7.1"
+  },
+  "peerDependencies": {
+    "ws": "*"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.7",
