--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
-    "isomorphic-ws": "^5.0.0",
-    "jszip": "^3.7.1"
+    "jszip": "^3.7.1",
+    "modern-isomorphic-ws": "^1.0.4"
   },
   "peerDependencies": {
     "ws": "*"
